# hexchex

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README  README.md
include/: Axial.h  Board.h  HexCorner.h  Point.h
src/: Axial.cpp  Board.cpp  HexCorner.cpp  Point.cpp  gtest_main.cpp  main.cpp
test/: AxialTest.cpp  HexCornerTest.cpp  PointTest.cpp
